<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.nijhoomt.ntrental.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.nijhoomt.ntrental.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_tenants"
        android:name="com.nijhoomt.ntrental.tenants.TenantsFragment"
        android:label="@string/title_tenants"
        tools:layout="@layout/fragment_tenants" />

    <fragment
        android:id="@+id/navigation_documents"
        android:name="com.nijhoomt.ntrental.documents.DocumentsFragment"
        android:label="@string/title_documents"
        tools:layout="@layout/fragment_documents" />
</navigation>